style.css
html {
    font-size: 62.5%;
}

:root {
    --highlight: #d025ff;
    --bright-highlight: #f954ff;
    --read-link : #a130d2;
    --deep-pool: #383476;
    --deep-shade: #2b27605f;
}

body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 2rem;
    border: none;
    margin: 0px;
    background-color: var(--deep-pool);
}

h1 {
    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
    font-weight: normal;
    font-size: 15rem;
}

h2 {
    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
    text-indent: 60px;
    font-size: 4rem;
}

p {
    text-indent: 30px;
}

a {
    color: var(--highlight);
}

a:visited {
    color: var(--read-link);
}

a:hover {
    color: var(--bright-highlight);
}

button {
    background-color: var(--highlight);
    border: none;
    border-radius: 5px;
    padding: 10px;
    font-size: 2rem;
    color: white;
    cursor: pointer;
}

button a {
    color: white;
    text-decoration: none;
}

::-webkit-scrollbar {
    width: 20px;
}

::-webkit-scrollbar-track {
    background-color: none;
    background-image: linear-gradient(to left, var(--deep-pool), #00000000);
}

::-webkit-scrollbar-thumb {
    background: var(--read-link);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background: var(--bright-highlight);
}

.link_icon {
    margin: 25px;
    cursor: pointer;
}

@keyframes button_hovered {
    from {
        scale: 1;
        opacity: 1;
    }
    to {
        scale: 1.25;
        opacity: 0.75;
    }
}

@keyframes button_mouse_left {
    from {
        scale: 1.25;
        opacity: 0.75;
    }
    to {
        scale: 1;
        opacity: 1;
    }
}

@keyframes header_pop {
    from {top: -100px;}
    to {top: 0px;}
}

@keyframes header_hide {
    0% {
        opacity: 1;
        background-color: white;
        color: black;
        background-image: none;
        position: sticky;
        top: 0;
    }
    75% {
        opacity: 0;
        background-color: transparent;
        color: transparent;
        background-image: linear-gradient(to bottom, var(--deep-pool), #00000000);
        position:sticky;
        top: -100px;
    }
    100% {
        opacity: 1;
        color: white;
    }
}

@keyframes header_nav_hide {
    from {
        color: black;
        box-shadow: none;
    }
    75% {
        color: transparent;
        box-shadow: none;
    }
    to {
        color: white;
    }
}

@keyframes header_button_hide {
    from {
        opacity: 1;
        box-shadow: none;
    }
    75% {
        opacity: 0;
        box-shadow: none;
    }
    to {
        opacity: 1;
        box-shadow: 5px 10px 10px var(--deep-shade);;
    }
}

@keyframes hover_nav {
    from {background-color: transparent;}
    to {
        background-color: var(--highlight);
    }
}

@keyframes mouse_left_nav {
    from {
        background-color: var(--highlight);
    }
    to {background-color: transparent;}
}

@keyframes shade_hover_nav {
    from {box-shadow: none;}
    to {box-shadow: 5px 10px 10px var(--deep-shade);}
}

@keyframes shade_mouse_left_nav {
    from {box-shadow: 5px 10px 10px var(--deep-shade);}
    to {box-shadow: none;}
}

header {
    display: flex;
    background-image: linear-gradient(to bottom, var(--deep-pool), #00000000);
    padding: 10px;
    padding-bottom: 25px;
    margin-top: -2px;
    text-align: center;
    transform: translateZ(0);
    animation: header_hide 1.5s;
}

header.fixed {
    z-index: 1000;
    background-color: white;
    background-image: none;
    color: black;
    position: sticky;
    top: 0;
    padding-bottom: 10px;
    box-shadow: 0px 10px 15px var(--deep-shade);
    animation: header_pop 1s;
}

header button {
    margin-right: 30px;
    box-shadow: 5px 10px 10px var(--deep-shade);
    animation: header_button_hide 1.5s;
}

header.fixed button {
    box-shadow: none;
    animation: none;
}

button:hover, header.fixed button:hover, .link_icon:hover {
    scale: 1.25;
    opacity: 0.75;
    animation: button_hovered 0.5s;
}

button:not(:hover), header.fixed button:not(:hover) .link_icon:not(:hover) {
    animation: button_mouse_left 1s;
}

header nav {
    display: flex;
    width: 100%;
}

header nav a, header nav a:visited {
    transform: translateZ(0);
    margin: -10px;
    margin-left: 0px;
    margin-right: 0px;
    padding: 30px;
    padding-top: 20px;
    color: white;
    text-decoration: none;
    animation: mouse_left_nav 1s, shade_mouse_left_nav 1s;
}

header.hiding nav a {
    animation: header_nav_hide 1.5s;
}

header nav a:hover {
    background: var(--highlight);
    color: white;
    box-shadow: 5px 10px 10px var(--deep-shade);
    animation: hover_nav 0.5s, shade_hover_nav 0.5s;
}

header.fixed nav a {
    color: black;
    animation: mouse_left_nav 1s;
}

header.fixed nav a:hover {
    box-shadow: none;
    animation: hover_nav 0.5s;
}

header .aligned_right {
    width: 100%;
}

.content {
    padding: 80px;
    background-color: white;
}

.centered {
    text-align: center;
}

.aligned_right {
    text-align: right;
}

.row {
    display: flex;
    max-width: 100vw;
}

.row button {
    flex: 1;
}

.parallax {
    perspective: 1px;
    height: 100vh;
    overflow-y: auto;
    overflow-x: hidden;
}

.parallax__layer {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.parallax__layer--base {
    top: 125vh;
    transform: translateZ(0);
}

.parallax__layer--back {
    transform: translateZ(-1px) scale(2);
    margin-left: 80px;
    margin-top: 100px;
    color: white;
}

.parallax__layer--deep {
    left: 0px;
    transform: translateZ(-2px) scale(3);
}

.parallax__layer--deep img {
    width: 100%;
    margin: 0;
    margin-left: -8px;
    opacity: 0.5;
}

.crop_top {
    margin-top: -100px;
}

.part {
    margin-bottom: 100px;
}

.important {
    margin: 250px;
}

.shaded {
    box-shadow: 5px 10px 10px var(--deep-shade);
}

.row button {
    margin: 50px;
}

.download {
    margin-top: 5px;
    border-radius: 25px;
}

.download img {
    border-radius: 20px;
    margin: -5px;
    margin-left: 10px;
    margin-bottom: -8px;
}

.anchor {
    display: block;
    position: relative;
    top: -100px;
    visibility: hidden;
}

